# myLang

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml  ubuntu-clang.yaml
tests/: test_shell.cpp
